Fixed tiny alignment issue with stats box

--- a/css/telemetry.css
+++ b/css/telemetry.css
@@ -266,7 +266,7 @@ svg .x-axis line {
 }
 
 .stats {
-    padding: 50px 0 15px 0;
+    padding: 54px 0 15px 0;
     font-size: 11px;
 }
 
